Fix: alignment of overlay buttons

--- a/client/src/app/map/controls/contour-toggle-overlay.component.scss
+++ b/client/src/app/map/controls/contour-toggle-overlay.component.scss
@@ -6,6 +6,7 @@
 
   @media (max-width: 768px) {
     bottom: 180px;
+    right: 10px;
   }
 }
 
