--- a/client/src/app/map/controls/show-change-toggle-overlay.component.scss
+++ b/client/src/app/map/controls/show-change-toggle-overlay.component.scss
@@ -6,6 +6,7 @@
 
   @media (max-width: 768px) {
     bottom: 130px;
+    right: 10px;
   }
 }
 
