--- a/client/src/styles/overlay-button.scss
+++ b/client/src/styles/overlay-button.scss
@@ -8,10 +8,6 @@
   margin: 0;
   padding: 0;
   pointer-events: none;
-
-  @media (max-width: 768px) {
-    right: 10px;
-  }
 }
 
 .overlay-toggle-button {
